[gd_scene load_steps=17 format=2]

[ext_resource path="res://fontes/sigma_five/SigmaFiveSansItalic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://sprite_/espaco.png" type="Texture" id=2]
[ext_resource path="res://sprite_/ET/sprite_ET0.png" type="Texture" id=3]
[ext_resource path="res://sprite_/ET/sprite_ET1.png" type="Texture" id=4]
[ext_resource path="res://fontes/sigma_five/SigmaFiveSans.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sprite_/botao/sprite_botao0.png" type="Texture" id=6]
[ext_resource path="res://sprite_/botao/sprite_botao1.png" type="Texture" id=7]
[ext_resource path="res://scripts/Reiniciar.gd" type="Script" id=8]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=9]
[ext_resource path="res://scripts/Game_Over.gd" type="Script" id=30]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 604, 306 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.862745, 0.729412, 0.729412, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "aniam_space"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 563, 306 ), Vector2( 678, 306 ), Vector2( 687, 321 ), Vector2( 566, 322 ), Vector2( 564.5, 278 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.898039, 0.835294, 0.835294, 1 ), Color( 0.945098, 0.423529, 0.423529, 1 ), Color( 0.921569, 0.254902, 0.254902, 1 ), Color( 0.537255, 0.215686, 0.215686, 1 ), Color( 0.692157, 0.458824, 0.458824, 1 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "ET",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "reiniciar",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 5 )

[node name="Game_Over" type="Node2D"]
script = ExtResource( 30 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.862745, 0.729412, 0.729412, 1 )
self_modulate = Color( 0.992157, 0.988235, 0.988235, 1 )
position = Vector2( 604, 306 )
scale = Vector2( 2.77022, 2.644 )
texture = ExtResource( 2 )

[node name="space" type="AnimationPlayer" parent="."]
autoplay = "aniam_space"
playback_speed = 0.5
anims/RESET = SubResource( 1 )
anims/aniam_space = SubResource( 2 )

[node name="ET" type="AnimatedSprite" parent="."]
position = Vector2( 622, 405 )
scale = Vector2( 0.66, 0.66 )
frames = SubResource( 3 )
animation = "ET"
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 315.0
margin_top = 93.0
margin_right = 1129.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 4 )
text = "Game Over"

[node name="Reiniciar" type="Button" parent="."]
margin_left = 916.0
margin_top = 433.0
margin_right = 1107.0
margin_bottom = 473.0
script = ExtResource( 8 )

[node name="reiniciar" type="AnimatedSprite" parent="Reiniciar"]
position = Vector2( 101, -74 )
scale = Vector2( 0.9075, 1.155 )
frames = SubResource( 5 )
animation = "reiniciar"
playing = true

[node name="Label" type="Label" parent="Reiniciar"]
margin_left = 27.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 6 )
text = "Reiniciar"

[node name="Menu" type="Button" parent="."]
margin_left = 162.0
margin_top = 429.0
margin_right = 324.0
margin_bottom = 471.0
script = ExtResource( 9 )

[node name="menu" type="AnimatedSprite" parent="Menu"]
position = Vector2( 99.0351, -74 )
scale = Vector2( 0.902588, 1.155 )
frames = SubResource( 5 )
animation = "reiniciar"
playing = true

[node name="Label" type="Label" parent="Menu"]
margin_left = 46.0
margin_top = 4.0
margin_right = 169.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 6 )
text = "Menu"

[connection signal="mouse_entered" from="Reiniciar" to="Reiniciar" method="_on_Reiniciar_mouse_entered"]
[connection signal="mouse_exited" from="Reiniciar" to="Reiniciar" method="_on_Reiniciar_mouse_exited"]
[connection signal="pressed" from="Reiniciar" to="Reiniciar" method="_on_Reiniciar_pressed"]
[connection signal="mouse_entered" from="Menu" to="." method="_on_Menu_mouse_entered"]
[connection signal="mouse_entered" from="Menu" to="Menu" method="_on_Menu_mouse_entered"]
[connection signal="mouse_exited" from="Menu" to="Menu" method="_on_Menu_mouse_exited"]
[connection signal="pressed" from="Menu" to="Menu" method="_on_Menu_pressed"]
